# mnist-nn-3

./: README.md  deploy.sh  model1.py  pyproject.toml  run.sh  train.py
neural_network_analysis/: model1.py  model2.py  model3.py  train.py  train_model3.py
