[project]
name = "neural-network-analysis"
version = "0.1.0"
description = "A project for neural network analysis."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "torchsummary",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neural_network_analysis"]
